Add Moderator.cpp, Moderator.x3d. Modify FollowReferee_v2.cpp, FollowMeTestRobot_v2.cpp, score.cpp, FollowTest.xml for a scoring system.

--- a/FollowMe/Template/FollowTest/Makefile
+++ b/FollowMe/Template/FollowTest/Makefile
@@ -1,7 +1,7 @@
 #sigverse header
 SIG_SRC  = $(SIGVERSE_PATH)/include/sigverse
 
-OBJS = CheckPoint.so CheckPoint2.so FollowMeHuman2.so FollowMeTestRobot_v2.so Wall.so score.so FollowReferee_v2.so
+OBJS = CheckPoint.so CheckPoint2.so FollowMeHuman2.so FollowMeTestRobot_v2.so Wall.so score.so FollowReferee_v2.so Moderator.so
 
 all: $(OBJS)
 
