Add Camera.cpp to track robot movement.

--- a/CleanUp/RoboCup/Template_for_RoboCup2014/Makefile
+++ b/CleanUp/RoboCup/Template_for_RoboCup2014/Makefile
@@ -3,7 +3,7 @@ SIG_SRC  = $(SIGVERSE_PATH)/include/sigverse
 
 #オブジェクトファイルの指定
 #OBJS     = Test.so TrashBox.so Camera.so Wagon.so Moderator.so
-OBJS     = CleanUpDemo2014Robo.so TrashBox.so Wagon.so Moderator.so
+OBJS     = CleanUp2014Robo.so TrashBox.so Wagon.so Moderator.so Camera.so
 #OBJS     = CleanUpRoboDemo.so TrashBox.so Camera.so Wagon.so Moderator.so
 #OBJS     = Test.so TrashBox.so Furniture.so Camera.so Wagon.so Moderator.so
 
