--- a/FollowMe/RoboCup/Referee/RoboCupReferee/RoboCupReferee.vcxproj
+++ b/FollowMe/RoboCup/Referee/RoboCupReferee/RoboCupReferee.vcxproj
@@ -43,10 +43,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <TargetExt>.sig</TargetExt>
+    <TargetName>FollowMe_$(ProjectName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetExt>.sig</TargetExt>
+    <TargetName>FollowMe_$(ProjectName)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
