--- a/EGPSR/RoboCup/Referee/RoboCupReferee/RoboCupReferee.vcxproj
+++ b/EGPSR/RoboCup/Referee/RoboCupReferee/RoboCupReferee.vcxproj
@@ -47,6 +47,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <TargetExt>.sig</TargetExt>
+    <TargetName>EGPSR_$(ProjectName)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
