--- a/FollowMe/Demo/Sample_for_Demo2014/Makefile
+++ b/FollowMe/Demo/Sample_for_Demo2014/Makefile
@@ -1,5 +1,5 @@
 #sigverse header
-SIG_SRC  = $(SIGVERSE_PATH)/include/sigverse
+SIG_SRC  = $(SIGVERSE_PATH)/include
 
 OBJS = CheckPoint.so CheckPoint2.so FollowMeHuman.so FollowMeTestRobot.so Wall.so score.so FollowReferee.so Moderator.so
 
@@ -7,7 +7,7 @@ all: $(OBJS)
 
 #compile
 ./%.so: ./%.cpp
-	g++ -DCONTROLLER -DNDEBUG -DUSE_ODE -DdDOUBLE -I$(SIG_SRC) -I$(SIG_SRC)/comm/controller -fPIC -shared -o $@ $<
+	g++ -DCONTROLLER -DNDEBUG -DUSE_ODE -DdDOUBLE -I$(SIG_SRC) -I$(SIG_SRC)/sigverse/commonlib -fPIC -shared -o $@ $<
 
 clean:
 	rm ./*.so
